@@ -2,6 +2,7 @@
   - RND-537-deprecate-node-types.
   - Add Update support for Server/Storage.
   - handle ovf network mapping where user don't provide all ovf networks.
+  - Add Cdrom support to OVF.
 2.20.0:
   - Add Ovf Deploy support.
   - Add Snapshot with memory support.
